--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "fp-ts": "^2.10.2",
     "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.16",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
